# PWE

./: .env.example  .gitignore  README-docker.md  README.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/src/api/: app.py  automatisierung_response.py  deps.py  errors.py  fehler.py  kommando_wiring.py  persistence.py  schemas.py
backend/src/ports/: bibliothek_repository.py  externes_kommando_port.py  katalog_repository.py  protokoll_erzeugung_port.py  protokoll_repository.py  prueflauf_abschluss_persistenz.py  prueflauf_repository.py
backend/tests/: helpers.py
backend/tests/adapters/: conftest.py  test_bibliothek_repository_contract.py  test_com_kommando.py  test_mapping.py  test_pdf_protokoll.py  test_postgresql_kommando_ausfuehren.py  test_postgresql_repositories.py  test_postgresql_routine_ausfuehren.py  test_postgresql_routine_materialisierung.py  test_pyserial_transport.py  test_repository_contract.py  test_simulation_kommando.py
backend/tests/api/: test_api_automatisierung_ausfuehren.py  test_api_externes_kommando.py  test_api_katalog_automatisierung_setup.py  test_api_negativ.py  test_api_openapi_automatisierung.py  test_api_openapi_katalog_automatisierung_setup.py  test_api_postgresql.py  test_api_postgresql_automatisierung.py  test_api_postgresql_katalog_automatisierung_setup.py  test_fehlerformat.py  test_katalog_api.py  test_kommando_wiring.py  test_nachweis_art_contract.py  test_postgres_deps_factory.py  test_prueflauf_api.py  test_prueflauf_read_api.py
backend/tests/application/: test_automatisierung_vorbedingungen.py  (+10 more)
(+137 files in other folders)
