[project]
name = "pwe-backend"
version = "0.1.0"
description = "PWE — Prüf-Workflow-Engine Backend"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
