[project]
name = "pwe-backend"
version = "0.1.0"
description = "PWE — Prüf-Workflow-Engine Backend"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
persistence = ["sqlalchemy>=2.0", "psycopg[binary]>=3.1"]
pdf = ["fpdf2>=2.7"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "postgresql: Tests gegen PostgreSQL (DATABASE_URL erforderlich)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
